Sec47_Chap421-XXX: refined DataLoader Code